--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,8 @@ $mainFont: 'Oswald', sans-serif;;
 
 body{
     font-family: $mainFont;
+    width: 1760px;
+    margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5{
