--- a/main.css
+++ b/main.css
@@ -190,6 +190,43 @@
     padding: 0 1rem;
   }
 }
+.impression__title {
+  font-size: 2.5rem;
+  padding: 2rem 0;
+}
+.impression__carousel {
+  width: 100%;
+}
+.impression__pic {
+  width: 100%;
+}
+.impression__counter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+.impression__nums, .impression__num {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.impression__num {
+  padding: 0 0.5rem;
+}
+.impression__btn {
+  border: none;
+  background: none;
+  font-size: 3rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .impression {
+    width: 100%;
+  }
+  .impression__title {
+    font-size: 1.5rem;
+  }
+}
 *, *::before, *::after {
   margin: 0;
   padding: 0;
