--- a/main.css
+++ b/main.css
@@ -227,6 +227,47 @@
     font-size: 1.5rem;
   }
 }
+.contact {
+  display: flex;
+  padding: 4rem 0;
+}
+.contact__wrapper {
+  width: 50%;
+}
+.contact__wrapper--text {
+  padding: 0 4rem;
+}
+.contact__pic {
+  width: 100%;
+}
+.contact__text {
+  font-size: 1.5rem;
+}
+.contact__text--small {
+  display: none;
+  padding: 1rem 0;
+}
+.contact__text--padding {
+  padding: 0.5rem 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .contact {
+    flex-direction: column;
+  }
+  .contact__wrapper {
+    width: 100%;
+  }
+  .contact__wrapper--text {
+    padding: 0;
+  }
+  .contact__text--big {
+    display: none;
+  }
+  .contact__text--small {
+    display: block;
+  }
+}
 *, *::before, *::after {
   margin: 0;
   padding: 0;
