--- a/main.css
+++ b/main.css
@@ -291,6 +291,95 @@
     grid-template-rows: repeat(10, 1fr);
   }
 }
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-top: solid black 1px;
+  padding: 2rem 0;
+}
+.footer__wrapper {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0;
+}
+.footer__wrapper--info {
+  width: 60%;
+  flex-direction: row;
+  justify-content: space-between;
+  border-top: solid 1px #b8b8b8;
+  color: #b8b8b8;
+}
+.footer__title {
+  font-size: 1.75rem;
+  padding: 1rem 0;
+}
+.footer__text {
+  font-size: 1.5rem;
+}
+.footer__text--underline {
+  text-decoration: underline;
+}
+.footer__text--padding {
+  padding: 1rem 0;
+}
+.footer__text--top {
+  padding-top: 1rem;
+}
+.footer__text--small {
+  display: none;
+  padding: 3rem 0;
+}
+.footer__facebook {
+  font-size: 2rem;
+  padding: 1rem 0;
+}
+.footer__copyright {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__info {
+  color: #b8b8b8;
+  text-decoration: none;
+}
+.footer__info--border {
+  border-right: solid 1px #b8b8b8;
+  padding-right: 1rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .footer {
+    flex-direction: column;
+  }
+  .footer__wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer__wrapper--info {
+    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer__text--big {
+    display: none;
+  }
+  .footer__text--small {
+    display: block;
+  }
+  .footer__copyright {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer__info {
+    border: none;
+  }
+}
 *, *::before, *::after {
   margin: 0;
   padding: 0;
